# AquariQuality

./: Cargo.toml  README.md  start_dev_docker.sh
aquariquality-frontend/: .env  middleware.ts  next.config.mjs  package-lock.json  package.json  start-frontend.sh  tailwind.config.js
aquariquality-frontend/src/app/: layout.js  page.js
aquariquality-frontend/src/app/dashboard/: page.js
aquariquality-frontend/src/app/login/: page.js
aquariquality-frontend/src/app/logout/: page.js
aquariquality-frontend/src/app/parameters/: page.js
aquariquality-frontend/src/app/register/: page.js
aquariquality-frontend/src/components/: menu.js
aquariquality-frontend/src/lib/: cookies.js  login.js  logout.js  register.js
config/: Settings.toml  api_keys
src/: main.rs
src/api_keys/: mod.rs
src/entities/: fish.rs  mod.rs  parameter.rs  session.rs  tank.rs  user.rs
src/frontend/: mod.rs
src/middleware/: api_key.rs
