[package]
name = "aquariquality"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-files = "0.6.5"
futures-util = "0.3.30"
config = "0.14.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "mysql" ] }
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
futures = "0.3.30"
actix-rt = "2.9.0"
actix-test = "0.1.3"
actix-cors = { version = "0.7.0", features = ["draft-private-network-access"] }
bytes = "1.5.0"
magic-crypt = "3.1.13"
base64 = "0.21.7"
tokio = "1.36.0"
tokio-test = "0.4.3"
